# pyalsaaudio

./: .gitignore  CHANGES  CHANGES.md  LICENSE  MANIFEST.in  Makefile  NOTES.md  README  README.md  TODO  alsaaudio.c  alsaaudio.pyi  echo.py  genindex.html  index.html  isine.py  libalsaaudio.html  loopback.py  mixertest.py  objects.inv  playbacktest.py  playwav.py  py-modindex.html  pyalsaaudio.html  pyproject.toml  recordtest.py  search.html  searchindex.js  setup.py  terminology.html  test.py
.github/workflows/: docs.yml  release.yml
_sources/: index.txt  libalsaaudio.rst.txt  libalsaaudio.txt  pyalsaaudio.txt  terminology.rst.txt
ci/: setup_cibuildwheel.sh
doc/: Makefile  README.md  about.html  conf.py  contents.html  front.html  index.html  index.rst  libalsaaudio.rst  mixer-objects.html  module-alsaaudio.html  node3.html  node4.html  node5.html  node7.html  pcm-example.html  pcm-objects.html  pyalsaaudio.html  pyalsaaudio.rst  terminology.rst
doc/src/: Makefile  libalsaaudio.tex  pyalsaaudio.tex  sffixup.py
examples/: loopback.py  playbacktest.py  playwav.py  recordtest.py
py/: play_rusage.py  setup.py
py/doc/: README.md  conf.py  libalsaaudio.rst  terminology.rst
src/: alsaaudio.c
src/alsaaudio/: __init__.py  __init__.pyi
src/alsaaudio-stubs/: __init__.pyi
tests/: params  params.c  test.py
