[project]
name = "pyalsaaudio"
version = "0.11.0"
description = "ALSA bindings"
readme.text = """
This package contains wrappers for accessing the ALSA API from Python.
It is fairly complete for PCM devices and Mixer access.
"""
readme.content-type = "text/plain"

license.file = "LICENSE"

# NOTE: license as a table has been deprecated by PEP-639, however support in
# setuptools has been introduced in v77.0 which is not installable on Python
# 3.9. Since this project doesn't constraint the minimum python version, we have
# to stick to the legacy `license` definition for now.

# license="PSF-2.0"
# license-files=["LICENSE"]

classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 2",
	"Programming Language :: Python :: 3",
	"Topic :: Multimedia :: Sound/Audio",
	"Topic :: Multimedia :: Sound/Audio :: Mixers",
	"Topic :: Multimedia :: Sound/Audio :: Players",
	"Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

[[project.authors]]
name = "Casper Wilstrup"
email = "cwi@aves.dk"

[[project.maintainers]]
name = "Lars Immisch"
email = "lars@ibp.de"

[project.urls]
homepage = "http://larsimmisch.github.io/pyalsaaudio/"
source = "https://github.com/larsimmisch/pyalsaaudio"
documentation = "https://larsimmisch.github.io/pyalsaaudio/"
issues = "https://github.com/larsimmisch/pyalsaaudio/issues"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
ext-modules = [
	{ name = "alsaaudio", sources = ["src/alsaaudio.c"], libraries = ["asound"] }
]


[tool.cibuildwheel]
build-frontend = "build[uv]"
before-all = "ci/setup_cibuildwheel.sh"


[dependency-groups]
lint = [
	"mypy>=1.17.1",
	"pyright>=1.1.403",
]
doc = [
	"sphinx>=8.1.3",
]
